Fixed the extra space between the copying links and the form in associate party, which is caused by sharing the same halfcolumn CSS property. See cmn 98 of issue 878.

--- a/gbif-ipt/src/main/webapp/styles/main.css
+++ b/gbif-ipt/src/main/webapp/styles/main.css
@@ -665,7 +665,9 @@ div.right {
   font-size: 0.9em;
   margin-top: -15px;
 }
-
+div.columnLinks div.halfcolumn {
+	height: 20px;  
+}
 /* Generic classis for metadata management */
 .addNew { margin-top:10px;font-size:0.92em; }
 
